tests/errors/test_80.xpp
// Class may only have one destructor

class Foo {
	destructor {}
	destructor {}
}

fn main() void {}
